--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang=pt/br>
+<html lang=pt-br>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festejando a união do campo e a cidade</title>
 </head>
 <body>
- <p></p>   
+ <p>  Essa parceria é a base do nosso progresso, uma dança essencial onde cada um tem seu papel fundamental. Não existe cidade que floresça sem o sustento vindo do campo, e não há campo que se desenvolva plenamente sem o dinamismo e as inovações que a cidade oferece.
+O campo, com suas vastas terras e o trabalho incansável de seus agricultores e pecuaristas, é a fonte da nossa vida. É de lá que vêm os alimentos que chegam à nossa mesa, a matéria-prima para a indústria e a energia que move o país. Sem a produção rural, as cidades simplesmente parariam. O ar que respiramos, muitas vezes purificado pelas grandes áreas verdes do campo, é outro presente inestimável.
+Por outro lado, a cidade é o centro do consumo, da tecnologia e dos serviços. Ela absorve a produção do campo, transforma-a e a distribui, gerando valor e oportunidades. As indústrias, os centros de pesquisa, os mercados e os polos tecnológicos que se concentram nas áreas urbanas são cruciais para que o campo modernize suas técnicas, aumente sua produtividade e escoe seus produtos. A cidade oferece acesso à educação, saúde e infraestrutura que impulsionam o desenvolvimento de todos.
+Essa interdependência é a chave para o crescimento. Quando o campo prospera, a cidade sente o reflexo em mais empregos, mais comércio e mais qualidade de vida. E quando a cidade se moderniza e se torna mais eficiente, o campo se beneficia com melhores tecnologias, mais acesso a mercados e condições mais favoráveis para o escoamento de sua produção.
+Celebrar essa união é celebrar o futuro. É reconhecer que somos todos parte de um mesmo ecossistema, onde a força de um impulsiona o outro. Que essa conexão entre campo e cidade continue se fortalecendo, construindo um Brasil cada vez mais próspero e equilibrado!
+</p>   
 </body>
 </html>
